--- a/src/pages/Home/Mentors/styles.module.scss
+++ b/src/pages/Home/Mentors/styles.module.scss
@@ -15,7 +15,6 @@
 .mentors {
   position: relative;
   margin: auto;
-  margin-top: 0px;
   right: 3%;
   padding-top: 1px;
 
